Colocando todos os arquivos na main

--- a/main.html
+++ b/main.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/mobile.css">
-    <link rel="shortcut icon" href="images/LogoVillageDecorOficial.jpeg" type="image/x-icon">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="mobile.css">
+    <link rel="shortcut icon" href="LogoVillageDecorOficial.jpeg" type="image/x-icon">
     <title>Villagedecor</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
 
        
         <div class="headerContainer">
-            <div class="logo"><img src="images/LogoVillageDecorOficial.jpeg" alt="Villagedecor Logo" class="villageLogo"></div>
+            <div class="logo"><img src="LogoVillageDecorOficial.jpeg" alt="Villagedecor Logo" class="villageLogo"></div>
             <div class="nav"> 
 
                 <nav>
