--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="/styles/mobile.css">
+    <link rel="stylesheet" href="styles/mobile.css">
     <link rel="shortcut icon" href="images/LogoVillageDecorOficial.jpeg" type="image/x-icon">
     <title>Villagedecor</title>
 </head>
